syntax = "proto3";

package nova.content;

// Content Service - gRPC interface for post/comment/like operations
// Serves content-service (port 8081)

message Post {
    string id = 1;
    string creator_id = 2;
    string content = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
}

message Comment {
    string id = 1;
    string post_id = 2;
    string creator_id = 3;
    string content = 4;
    int64 created_at = 5;
}

message GetPostRequest {
    string post_id = 1;
}

message GetPostResponse {
    Post post = 1;
    bool found = 2;
    string error = 3;
}

message CreatePostRequest {
    string creator_id = 1;
    string content = 2;
}

message CreatePostResponse {
    Post post = 1;
    string error = 2;
}

message GetCommentsRequest {
    string post_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetCommentsResponse {
    repeated Comment comments = 1;
    int32 total = 2;
    string error = 3;
}

message LikePostRequest {
    string post_id = 1;
    string user_id = 2;
}

message LikePostResponse {
    bool success = 1;
    string error = 2;
}

message GetUserBookmarksRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetUserBookmarksResponse {
    repeated Post posts = 1;
    int32 total = 2;
    string error = 3;
}

message GetFeedRequest {
    string user_id = 1;
    string algo = 2;
    uint32 limit = 3;
    string cursor = 4;
}

message GetFeedResponse {
    repeated string post_ids = 1;
    string cursor = 2;
    bool has_more = 3;
    uint32 total_count = 4;
    string error = 5;
}

message InvalidateFeedEventRequest {
    string event_type = 1;
    string user_id = 2;
    string target_user_id = 3;
}

message InvalidateFeedResponse {
    bool success = 1;
    string error = 2;
}

message BatchInvalidateFeedRequest {
    repeated string user_ids = 1;
}

message WarmFeedRequest {
    string user_id = 1;
    repeated string post_ids = 2;
}

service ContentService {
    rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
    rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse) {}
    rpc LikePost(LikePostRequest) returns (LikePostResponse) {}
    rpc GetUserBookmarks(GetUserBookmarksRequest) returns (GetUserBookmarksResponse) {}
    rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {}
    rpc InvalidateFeedEvent(InvalidateFeedEventRequest) returns (InvalidateFeedResponse) {}
    rpc BatchInvalidateFeed(BatchInvalidateFeedRequest) returns (InvalidateFeedResponse) {}
    rpc WarmFeed(WarmFeedRequest) returns (InvalidateFeedResponse) {}
}
